<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- <SwitchPreference
        android:defaultValue="true"
        android:key="example_switch"
        android:summary="@string/pref_description_social_recommendations"
        android:title="@string/pref_title_social_recommendations" /> -->

    <!-- NOTE: EditTextPreference accepts EditText attributes. -->
    <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->
    <EditTextPreference
        android:capitalize="words"
        android:defaultValue="@string/pref_default_display_name"
        android:inputType="textCapWords"
        android:key="name"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_display_name" />

    <EditTextPreference
        android:capitalize="none"
        android:defaultValue="@string/pref_default_email"
        android:inputType="textEmailAddress"
        android:key="email"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_email" />

    <EditTextPreference
        android:capitalize="none"
        android:defaultValue="@string/pref_default_ftp"
        android:inputType="number"
        android:key="ftp"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_ftp" />

    <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
         dismiss it. -->
    <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->
    <ListPreference
        android:defaultValue="DEV_ANTLOCAL"
        android:entries="@array/pref_list_devices"
        android:entryValues="@array/pref_list_devices_values"
        android:key="device"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_title_devices" />

    <ListPreference
        android:defaultValue="0"
        android:entries="@array/pref_list_virtual_power"
        android:entryValues="@array/pref_list_virtual_power_values"
        android:key="virtual"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_title_virtual_power" />
    <ListPreference
        android:defaultValue="622"
        android:entries="@array/pref_list_rim"
        android:entryValues="@array/pref_list_rim_values"
        android:key="rim"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_title_rim" />
    <ListPreference
        android:defaultValue="46"
        android:entries="@array/pref_list_tire"
        android:entryValues="@array/pref_list_tire_values"
        android:key="tire"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_title_tire" />

</PreferenceScreen>
